# qubitcoin-aether

./: .dockerignore  .env.example  .env.production.example  .env.save  .gitignore  AETHER_AGI_ARCHITECTURE_PLAN.md  AETHER_EVOLVE_MASTER_PLAN.md  AETHER_UPGRADE_PLAN.md  AETHER_V5_NEURAL_REDESIGN.md  AGENTS.md  AGI_MASTER_TODO.md  AGI_ROADMAP_75.md  AUDIT.md  AUDIT_PROTOCOL.md  CLAUDE.md  CODE_REVIEW.md  CONTRIBUTING.md  Dockerfile  FIXES_LOG.md  FULL_CODE_REVIEW.md  HANDOVER.md  LAUNCHTODO.md  LICENSE  MASTERUPDATETODO.md  MASTER_LAUNCH_PLAN.md  MODEL_CARD.md  NEW_THREAD_INSTRUCTIONS.md  PEER_REVIEW_2026_04_26.md  PEER_REVIEW_2026_05_02.md  README.md  REVIEW.md  TODO.md  UPDATETODO.md  UPGRADE_PLAN.md  alembic.ini  check_balance.py  contract_registry.json  dashboard_server_debug.py  docker-compose-ssl.yml  docker-compose.production.yml  (+17 more)
aether-cli/: Cargo.toml  README.md  install.sh
aether-cli/.github/workflows/: ci.yml  release.yml
aether-cli/crates/aether-cli/: Cargo.toml
aether-cli/crates/aether-client/: Cargo.toml
aether-cli/crates/aether-innovation/: Cargo.toml
aether-cli/crates/aether-miner/: Cargo.toml
aether-cli/crates/aether-privacy/: Cargo.toml
aether-cli/crates/aether-tui/: Cargo.toml
aether-cli/crates/aether-wallet/: Cargo.toml
aether-core/: Cargo.toml  README.md  pyproject.toml
aether-core/benches/: bench_knowledge_graph.rs  bench_phi.rs  bench_vector_index.rs
aether-core/crates/aether-chat/: Cargo.toml
aether-core/crates/aether-cognitive/: Cargo.toml
aether-core/crates/aether-consciousness/: Cargo.toml
aether-core/crates/aether-engine/: Cargo.toml
aether-core/crates/aether-fabric/: Cargo.toml
aether-core/crates/aether-graph/: Cargo.toml
aether-core/crates/aether-infra/: Cargo.toml
aether-core/crates/aether-knowledge/: Cargo.toml
aether-core/crates/aether-logic/: Cargo.toml
aether-core/crates/aether-memory/: Cargo.toml
aether-core/crates/aether-neural/: Cargo.toml
aether-core/crates/aether-nlp/: Cargo.toml
aether-core/crates/aether-persistence/: Cargo.toml
aether-core/crates/aether-phi/: Cargo.toml
aether-core/crates/aether-protocol/: Cargo.toml
aether-core/crates/aether-pyo3/: Cargo.toml
aether-core/crates/aether-reasoning/: Cargo.toml
aether-core/crates/aether-safety/: Cargo.toml
aether-core/crates/aether-sephirot/: Cargo.toml
aether-core/crates/aether-temporal/: Cargo.toml
aether-core/crates/aether-transformer/: Cargo.toml
aether-core/crates/aether-types/: Cargo.toml
aether-core/src/: lib.rs
aether-core/src/knowledge_graph/: mod.rs
aether-core/src/neural/: mod.rs  python_bindings.rs  trainer.rs
aether-core/src/vector_index/: mod.rs
aether-core/src_legacy/: lib.rs
aether-core/src_legacy/csf_transport/: mod.rs
aether-core/src_legacy/knowledge_graph/: keter_node.rs
aether-core/src_legacy/memory_manager/: mod.rs
aether-core/src_legacy/neural/: mod.rs  python_bindings.rs
aether-core/src_legacy/phi_calculator/: mod.rs
aether-core/src_legacy/working_memory/: mod.rs
aether-evolve/: Cargo.toml  config.toml
aether-evolve/cognition/: aether_specific.toml  agi_gaps.toml  causal_inference.toml  iit.toml
aether-evolve/crates/aether-evolve-agents/: Cargo.toml
aether-evolve/crates/aether-evolve-api/: Cargo.toml
aether-evolve/crates/aether-evolve-core/: Cargo.toml
aether-evolve/crates/aether-evolve-llm/: Cargo.toml
aether-evolve/crates/aether-evolve-memory/: Cargo.toml
aether-evolve/crates/aether-evolve-safety/: Cargo.toml
aether-evolve/src/: main.rs
aether-graph-shard/: Cargo.toml  Dockerfile  build.rs
aether-graph-shard/proto/: graph_shard.proto
aether-graph-shard/src/: main.rs  merkle.rs  router.rs  service.rs  storage.rs  types.rs  vector_index.rs
aikgs-sidecar/: Cargo.toml  Dockerfile  README.md  build.rs
aikgs-sidecar/proto/: aikgs.proto
aikgs-sidecar/src/: affiliates.rs  bounties.rs  config.rs  contributions.rs  curation.rs  db.rs  lib.rs  main.rs  rewards.rs  scorer.rs  service.rs  treasury.rs  unlocks.rs  validation.rs  vault.rs
api-gateway/: Cargo.toml  Dockerfile  README.md
api-gateway/src/: auth.rs  config.rs  main.rs  ratelimit.rs  state.rs
api-gateway/src/routes/: aether.rs  chain.rs  health.rs  jsonrpc.rs  mining.rs  mod.rs  wallet.rs
api-gateway/tests/: integration.rs
indexer/: Cargo.toml  Dockerfile  README.md
indexer/src/: config.rs  db.rs  indexer.rs  main.rs  substrate.rs  types.rs
qbc-exchange/: Cargo.toml  Dockerfile
qbc-exchange/proto/: exchange.proto
qbc-exchange/src/: main.rs  oracle.rs  orderbook.rs  service.rs  synthetic.rs  types.rs
qbc-exchange/src/bridge/: exchange_pb2.py  exchange_pb2_grpc.py
rust-p2p/: Cargo.toml  Dockerfile  README.md  build.rs
rust-p2p/proto/: p2p_service.proto
rust-p2p/src/: main.rs
rust-p2p/src/bridge/: mod.rs  p2p_service_pb2.py  p2p_service_pb2_grpc.py
rust-p2p/src/network/: mod.rs
rust-p2p/src/protocol/: mod.rs
sdk/python/: pyproject.toml
sdk/python/aether_qbc/: __init__.py  client.py  types.py
security-core/: Cargo.toml  README.md  pyproject.toml
security-core/src/: bloom.rs  finality.rs  lib.rs
stratum-server/: Cargo.toml  README.md  build.rs
stratum-server/proto/: stratum.proto
stratum-server/src/: bridge.rs  config.rs  lib.rs  main.rs  pool.rs  protocol.rs  worker.rs
substrate-node/: .gitignore  Cargo.toml  README.md  chain-spec-fork-raw.json  fork_state.json
substrate-node/bimetric-physics/: Cargo.toml
substrate-node/bimetric-physics/src/: coupling.rs  determinism_tests.rs  hamiltonian.rs  lib.rs  potential.rs  sephirot.rs
substrate-node/crypto/kyber-transport/: Cargo.toml
substrate-node/docker/: Dockerfile  docker-compose.yml
substrate-node/mining/: Cargo.toml
substrate-node/mining/src/: ansatz.rs  engine.rs  hamiltonian.rs  lib.rs  simulator.rs  vqe.rs
substrate-node/node/: Cargo.toml
substrate-node/node/src/: aether_bridge.rs  block_author.rs  chain_spec.rs  cli.rs  (+4 more)
substrate-node/p2p-bridge/: Cargo.toml  build.rs
substrate-node/primitives/: Cargo.toml
substrate-node/runtime/: Cargo.toml  build.rs
substrate-node/vqe-verifier/: Cargo.toml
(+1271 files in other folders)
