[workspace]
resolver = "2"
members = [
    "crates/aether-cli",
    "crates/aether-client",
    "crates/aether-tui",
    "crates/aether-wallet",
    "crates/aether-miner",
    "crates/aether-innovation",
    "crates/aether-privacy",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["QuantumAI Blockchain <info@qbc.network>"]
repository = "https://github.com/QuantumAI-Blockchain/aether-cli"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"
log = "0.4"
env_logger = "0.11"
crossterm = "0.28"
ratatui = "0.29"
hex = "0.4"
sha2 = "0.10"
parity-scale-codec = { version = "3", features = ["derive"] }
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
