[workspace]
resolver = "2"
members = [
    "crates/aether-types",
    "crates/aether-graph",
    "crates/aether-phi",
    "crates/aether-memory",
    "crates/aether-neural",
    "crates/aether-sephirot",
    "crates/aether-persistence",
    "crates/aether-pyo3",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
