[workspace]
resolver = "2"
members = [
    "crates/aether-types",
    "crates/aether-graph",
    "crates/aether-phi",
    "crates/aether-memory",
    "crates/aether-neural",
    "crates/aether-sephirot",
    "crates/aether-logic",
    "crates/aether-reasoning",
    "crates/aether-knowledge",
    "crates/aether-nlp",
    "crates/aether-cognitive",
    "crates/aether-safety",
    "crates/aether-chat",
    "crates/aether-protocol",
    "crates/aether-infra",
    "crates/aether-engine",
    "crates/aether-pyo3",
    "crates/aether-temporal",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
