[workspace]
resolver = "2"
members = [
    "crates/aether-evolve-core",
    "crates/aether-evolve-llm",
    "crates/aether-evolve-api",
    "crates/aether-evolve-safety",
    "crates/aether-evolve-memory",
    "crates/aether-evolve-agents",
    ".",
]

[package]
name = "aether-evolve"
version = "0.1.0"
edition = "2024"
license = "MIT"

[[bin]]
name = "aether-evolve"
path = "src/main.rs"

[dependencies]
aether-evolve-core = { workspace = true }
aether-evolve-llm = { workspace = true }
aether-evolve-api = { workspace = true }
aether-evolve-safety = { workspace = true }
aether-evolve-memory = { workspace = true }
aether-evolve-agents = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
repository = "https://github.com/QuantumAI-Blockchain/aether-evolve"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Error handling
anyhow = "1"
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# Templating
tera = "1"

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# Workspace crates
aether-evolve-core = { path = "crates/aether-evolve-core" }
aether-evolve-llm = { path = "crates/aether-evolve-llm" }
aether-evolve-api = { path = "crates/aether-evolve-api" }
aether-evolve-safety = { path = "crates/aether-evolve-safety" }
aether-evolve-memory = { path = "crates/aether-evolve-memory" }
aether-evolve-agents = { path = "crates/aether-evolve-agents" }
