[package]
name = "aether-graph-shard"
version = "0.1.0"
edition = "2024"
description = "Distributed knowledge graph shard service for trillion-node scale"
license = "MIT"

[[bin]]
name = "aether-graph-shard"
path = "src/main.rs"

[dependencies]
# gRPC
tonic = { version = "0.13", features = ["transport"] }
prost = "0.13"
prost-types = "0.13"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Storage
rocksdb = { version = "0.23", features = ["multi-threaded-cf"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"

# Hashing
sha2 = "0.10"
hex = "0.4"

# Concurrency
dashmap = "6"
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Logging + metrics
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
prometheus = "0.13"

# HTTP (metrics endpoint)
axum = "0.8"

# Streaming
tokio-stream = "0.1"
futures = "0.3"

# CPU count
num_cpus = "1"

# Utils
anyhow = "1"
thiserror = "2"
chrono = "0.4"
rand = "0.9"
bytes = "1"
ordered-float = "5"
lru = "0.13"

[build-dependencies]
tonic-build = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
