[package]
name = "aikgs-sidecar"
version = "0.1.0"
edition = "2021"
description = "AIKGS Rust sidecar — Aether Incentivized Knowledge Growth System"

[lib]
name = "aikgs_sidecar"
path = "src/lib.rs"

[[bin]]
name = "aikgs-sidecar"
path = "src/main.rs"

[dependencies]
tonic = { version = "0.12", default-features = false, features = ["prost", "codegen", "channel", "server", "transport"] }
prost = "0.13"
prost-types = "0.13"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "tls-rustls", "postgres", "chrono", "json", "bigdecimal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
aes-gcm = "0.10"
sha2 = "0.10"
hmac = "0.12"
hkdf = "0.12"
hex = "0.4"
regex = "1"
log = "0.4"
env_logger = "0.11"
rand = "0.8"
thiserror = "2"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
bigdecimal = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12"
