[package]
name = "qbc-api-gateway"
version = "0.1.0"
edition = "2021"
description = "Qubitcoin API Gateway — REST + JSON-RPC on port 5000"
license = "MIT"

[[bin]]
name = "qbc-api-gateway"
path = "src/main.rs"

[dependencies]
# Web framework
axum = { version = "0.8", features = ["json", "query", "ws"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace", "compression-gzip"] }

# Database (CockroachDB)
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "bigdecimal",
    "json",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client (for Aether service proxy)
reqwest = { version = "0.12", features = ["json"] }

# Utilities
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
anyhow = "1"
thiserror = "2"
bigdecimal = { version = "0.4", features = ["serde"] }

# Rate limiting
governor = "0.10"

# Prometheus metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.16"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"

[profile.release]
opt-level = 3
lto = "thin"
strip = true
