[package]
name = "qbc-indexer"
version = "0.1.0"
edition = "2021"
description = "Qubitcoin Block Indexer — subscribes to finalized Substrate blocks and writes to CockroachDB"
license = "MIT"

[[bin]]
name = "qbc-indexer"
path = "src/main.rs"

[dependencies]
# Substrate client (dynamic mode — no compile-time metadata required)
subxt = { version = "0.38", features = ["substrate-compat"] }
subxt-signer = { version = "0.38", features = ["sr25519"] }
codec = { package = "parity-scale-codec", version = "3.7", features = ["derive"] }

# Database (CockroachDB via PostgreSQL wire protocol)
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "uuid",
    "chrono",
    "bigdecimal",
] }

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Hashing (coinbase txid computation)
sha2 = "0.10"

# Scale value decoding (re-exported by subxt, pinned for type compatibility)
scale-value = "0.17"

# Utilities
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
anyhow = "1"
bigdecimal = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
