[package]
name = "qbc-exchange"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.49", features = ["full"] }

tonic = "0.12"
prost = "0.13"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

anyhow = "1.0"
thiserror = "2.0"

dashmap = "6.0"
ordered-float = "5.0"
uuid = { version = "1.0", features = ["v4"] }

[build-dependencies]
tonic-build = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
