[package]
name = "qubitcoin-p2p"
version = "1.0.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.53", features = ["tcp", "noise", "mplex", "gossipsub", "kad", "identify", "ping", "mdns"] }
tokio = { version = "1.35", features = ["full"] }
tonic = "0.11"
prost = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
futures = "0.3"

[build-dependencies]
tonic-build = "0.11"
