[package]
name = "qubitcoin-p2p"
version = "1.0.0"
edition = "2021"

[dependencies]
tokio = { version = "1.49", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
tokio-stream = { version = "0.1", features = ["sync"] }

libp2p = { version = "0.56", features = [
    "tcp",
    "noise",
    "yamux",
    "gossipsub",
    "mdns",
    "kad",
    "identify",
    "ping",
    "macros",
    "tokio",
    "quic",
    "dns",
    "relay",
    "dcutr",
    "upnp",
    "metrics"
] }

tonic = "0.12"
prost = "0.13"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

sha2 = "0.10"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

anyhow = "1.0"
thiserror = "2.0"

bytes = "1.11"
futures = "0.3"
async-trait = "0.1"

[build-dependencies]
tonic-build = "0.12"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
