[package]
name = "security-core"
version = "0.1.0"
edition = "2021"
description = "Qubitcoin security primitives — Bloom filter and BFT finality core"
license = "MIT"

[lib]
name = "security_core"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.23", features = ["auto-initialize"] }
pyo3-log = "0.12"
sha2 = "0.10"
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
