[package]
name = "qbc-stratum"
version = "0.1.0"
edition = "2021"
description = "Qubitcoin Stratum Mining Server — WebSocket pool interface with gRPC node bridge"
license = "MIT"

[[bin]]
name = "qbc-stratum"
path = "src/main.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# gRPC
tonic = "0.12"
prost = "0.13"

# WebSocket
tokio-tungstenite = "0.26"
futures-util = "0.3"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Crypto
sha2 = "0.10"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Errors
thiserror = "2"

# Configuration
dotenvy = "0.15"

# Concurrent data structures
dashmap = "6"

# UUID
uuid = { version = "1", features = ["v4"] }

# Timestamp
chrono = "0.4"

[build-dependencies]
tonic-build = "0.12"
