[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aether-qbc"
version = "0.1.0"
description = "Python SDK for the Aether Tree AI — on-chain reasoning engine on the QuantumAI Blockchain"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "QuantumAI Blockchain", email = "info@qbc.network" },
]
keywords = ["agi", "blockchain", "quantum", "knowledge-graph", "reasoning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://qbc.network"
Documentation = "https://github.com/QuantumAI-Blockchain/qubitcoin-node/blob/main/docs/SDK.md"
Repository = "https://github.com/QuantumAI-Blockchain/qubitcoin-node"
Issues = "https://github.com/QuantumAI-Blockchain/qubitcoin-node/issues"

[tool.hatch.build.targets.wheel]
packages = ["aether_qbc"]
