[package]
name = "qbc-mining"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Native Rust VQE mining engine for Qubitcoin Substrate node"

[dependencies]
# Quantum simulation
num-complex = "0.4"

# no_std trig (cos/sin for bimetric Hamiltonian)
libm = "0.2"

# Derivative-free optimizer
cobyla = "0.6"

# Random number generation
rand = "0.8"
rand_chacha = "0.3"

# Hashing (match pallet seed derivation)
sha2 = "0.10"
hex = "0.4"

# Substrate primitives
sp-core = { workspace = true, features = ["std"] }
sp-runtime = { workspace = true, features = ["std"] }
sp-api = { workspace = true, features = ["std"] }
sp-blockchain = "43.0"
codec = { workspace = true, features = ["std"] }

# Async
futures = { workspace = true }
tokio = { workspace = true }

# Logging
log = { workspace = true }

# Local
qbc-primitives = { workspace = true, features = ["std"] }

[dev-dependencies]
approx = "0.5"
