[package]
name = "qbc-primitives"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Qubitcoin shared primitive types — Address, TxId, UTXO, DilithiumSignature"

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
serde = { workspace = true, optional = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-std/std",
    "serde",
    "serde/std",
]
