[package]
name = "qbc-primitives"
version = "0.1.0"
edition.workspace = true
license.workspace = true
description = "Qubitcoin shared primitive types — Address, TxId, UTXO, DilithiumSignature"

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
sp-api = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-runtime-interface = { workspace = true }
sp-externalities = { version = "0.31", default-features = false }
sp-std = { workspace = true }
serde = { workspace = true }
log = { workspace = true }

# Post-quantum crypto — only available in native (std) builds
pqcrypto-dilithium = { workspace = true, optional = true }
pqcrypto-traits = { workspace = true, optional = true }

[dev-dependencies]
qbc-kyber-transport = { path = "../crypto/kyber-transport" }

[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "sp-api/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-runtime-interface/std",
    "sp-externalities/std",
    "sp-std/std",
    "serde/std",
    "pqcrypto-dilithium",
    "pqcrypto-traits",
]
