[package]
name = "aether-client"
description = "HTTP client for Aether Mind API + Substrate RPC"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
parity-scale-codec = { workspace = true }
log = { workspace = true }
twox-hash = "2"
blake2 = "0.10"
