[package]
name = "aether-miner"
description = "VQE mining engine for Qubitcoin"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
num-complex = "0.4"
cobyla = "0.6"
rand = "0.8"
rand_chacha = "0.3"
sha2 = "0.10"
hex = "0.4"
