[package]
name = "aether-miner"
description = "VQE mining engine for Qubitcoin with proper Substrate extrinsic submission"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
parity-scale-codec = { workspace = true }
num-complex = "0.4"
cobyla = "0.6"
rand = "0.8"
rand_chacha = "0.3"
libm = "0.2"
ed25519-dalek = { version = "2", features = ["rand_core"] }
aether-client = { path = "../aether-client" }
