[package]
name = "aether-privacy"
description = "Susy Swap privacy transactions — Pedersen commitments, range proofs, stealth addresses"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
k256 = { version = "0.13", features = ["arithmetic", "ecdh", "hash2curve"] }
sha2 = { workspace = true }
rand = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
hex = { workspace = true }
anyhow = { workspace = true }
