[package]
name = "aether-wallet"
description = "Dilithium5 + sr25519 wallet for Qubitcoin"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = "0.8"
aes-gcm = "0.10"
sha2 = "0.10"
hex = "0.4"
dirs = "6"
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
