[package]
name = "aether-wallet"
description = "Dilithium5 quantum-secure multi-wallet keystore for Qubitcoin"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rand = "0.8"
aes-gcm = "0.10"
sha2 = { workspace = true }
hex = { workspace = true }
dirs = "6"
zeroize = { version = "1", features = ["derive"] }
argon2 = "0.5"
pqcrypto-dilithium = { workspace = true }
pqcrypto-traits = { workspace = true }
parity-scale-codec = { workspace = true }
log = { workspace = true }

[dev-dependencies]
tempfile = "3"
