[package]
name = "aether-cognitive"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Metacognition, self-improvement, curiosity, and emotional state for the Aether Tree AI"

[dependencies]
aether-types = { path = "../aether-types" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
parking_lot = "0.12"
log = "0.4"
pyo3 = { version = "0.23", features = ["auto-initialize"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
approx = "0.5"
